--- a/TravelPlanner.BusinessLogic/TravelPlanner.BusinessLogic.csproj
+++ b/TravelPlanner.BusinessLogic/TravelPlanner.BusinessLogic.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>23cc0e65-7dca-4f4c-a855-06006c59cfd7</ProjectGuid>
+    <ProjectGuid>55080128-270c-406a-9722-d788b5d22c7e</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TravelPlanner</RootNamespace>
-    <AssemblyName>TravelPlanner</AssemblyName>
+    <RootNamespace>TravelPlanner.BusinessLogic</RootNamespace>
+    <AssemblyName>TravelPlanner.BusinessLogic</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
