--- a/TravelPlanner.DomainModel/TravelPlanner.DomainModel.csproj
+++ b/TravelPlanner.DomainModel/TravelPlanner.DomainModel.csproj
@@ -40,8 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chat.cs" />
+    <Compile Include="Invitation.cs" />
+    <Compile Include="InvitedUserTrip.cs" />
+    <Compile Include="Message.cs" />
     <Compile Include="Trip.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
