--- a/TravelPlanner.DataAccess/packages.config
+++ b/TravelPlanner.DataAccess/packages.config
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.EntityFrameworkCore" version="1.1.2" targetFramework="net452" />
-  <package id="Microsoft.EntityFrameworkCore.Relational" version="1.1.2" targetFramework="net452" />
-  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="1.1.2" targetFramework="net452" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="1.1.1" targetFramework="net452" />
   <package id="Microsoft.Extensions.Caching.Memory" version="1.1.1" targetFramework="net452" />
   <package id="Microsoft.Extensions.DependencyInjection" version="1.1.0" targetFramework="net452" />
