--- a/TravelPlanner.DomainModel/TravelPlanner.DomainModel.csproj
+++ b/TravelPlanner.DomainModel/TravelPlanner.DomainModel.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,7 +43,6 @@
   <ItemGroup>
     <Compile Include="Chat.cs" />
     <Compile Include="Invitation.cs" />
-    <Compile Include="InvitedUserTrip.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="Trip.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
