--- a/TravelPlanner.DataAccess/packages.config
+++ b/TravelPlanner.DataAccess/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="1.1.1" targetFramework="net452" />
   <package id="Microsoft.Extensions.Caching.Memory" version="1.1.1" targetFramework="net452" />
   <package id="Microsoft.Extensions.DependencyInjection" version="1.1.0" targetFramework="net452" />
