--- a/TravelPlanner.Web/appsettings.json
+++ b/TravelPlanner.Web/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TravelPlanner;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
+  "JWTSettings": {
+    "SecretKey": "jwts-are-awesome",
+    "Issuer": "travel_planner",
+    "Audience": "TravelPlannerAPI"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
