added translations, added mytrips baisc and create basic, todo: create trip page, create backend for trip CRUD

--- a/TravelPlanner.Web/TravelPlanner.Web.csproj
+++ b/TravelPlanner.Web/TravelPlanner.Web.csproj
@@ -25,6 +25,9 @@
     <Content Remove="ClientApp\**" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="wwwroot\ru.json" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\TravelPlanner.BusinessLogic\TravelPlanner.BusinessLogic.csproj" />
     <ProjectReference Include="..\TravelPlanner.DataAccess\TravelPlanner.DataAccess.csproj" />
     <ProjectReference Include="..\TravelPlanner.DomainModel\TravelPlanner.DomainModel.csproj" />
