--- a/TravelPlanner.Identity/TravelPlanner.Identity.csproj
+++ b/TravelPlanner.Identity/TravelPlanner.Identity.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{55080128-270C-406A-9722-D788B5D22C7E}</ProjectGuid>
+    <ProjectGuid>{5C849FEB-13FD-42C0-A939-3C7092A4BC3A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TravelPlanner.BusinessLogic</RootNamespace>
-    <AssemblyName>TravelPlanner.BusinessLogic</AssemblyName>
+    <RootNamespace>TravelPlanner.Identity</RootNamespace>
+    <AssemblyName>TravelPlanner.Identity</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -43,19 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Extensions\DateTimeExtensions.cs" />
-    <Compile Include="Extensions\GuidExtensions.cs" />
-    <Compile Include="Interfaces\ITripService.cs" />
-    <Compile Include="Services\TripService.cs" />
-    <Compile Include="Models\ValidationResultCodes.cs" />
-    <Compile Include="Models\ValidationResult.cs" />
+    <Compile Include="IdentityManagers\ApplicationUserManager.cs" />
+    <Compile Include="IdentityStores\TravelPlannerUserStore.cs" />
+    <Compile Include="IdentityValidators\ApplicationPasswordValidator.cs" />
+    <Compile Include="IdentityValidators\ApplicationUserValidator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Security\IAuthTokenManager.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
+    <ProjectReference Include="..\TravelPlanner.BusinessLogic\TravelPlanner.BusinessLogic.csproj">
+      <Project>{55080128-270C-406A-9722-D788B5D22C7E}</Project>
+      <Name>TravelPlanner.BusinessLogic</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TravelPlanner.DataAccess\TravelPlanner.DataAccess.csproj">
       <Project>{3A32CB30-C11C-4172-B9D6-3A71D0CE36D0}</Project>
       <Name>TravelPlanner.DataAccess</Name>
@@ -65,6 +63,8 @@
       <Name>TravelPlanner.DomainModel</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
