--- a/TravelPlanner.Web/TravelPlanner.Web.csproj
+++ b/TravelPlanner.Web/TravelPlanner.Web.csproj
@@ -5,6 +5,7 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="6.1.1" />
     <PackageReference Include="EntityFramework" Version="6.1.3" />
     <PackageReference Include="JWT" Version="2.4.2" />
     <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.1" />
