--- a/TravelPlanner.BusinessLogic/TravelPlanner.BusinessLogic.csproj
+++ b/TravelPlanner.BusinessLogic/TravelPlanner.BusinessLogic.csproj
@@ -49,6 +49,10 @@
     <Compile Include="Extensions\DateTimeExtensions.cs" />
     <Compile Include="Extensions\GuidExtensions.cs" />
     <Compile Include="Interfaces\ITripService.cs" />
+    <Compile Include="Interfaces\INotificationService.cs" />
+    <Compile Include="Models\NotificationModel.cs" />
+    <Compile Include="Services\TextFileNotificationService.cs" />
+    <Compile Include="Services\TripInviteService.cs" />
     <Compile Include="Services\TripService.cs" />
     <Compile Include="Models\ValidationResultCodes.cs" />
     <Compile Include="Models\ValidationResult.cs" />
