--- a/TravelPlanner.Web/package.json
+++ b/TravelPlanner.Web/package.json
@@ -16,8 +16,8 @@
     "@angular/platform-server": "4.1.2",
     "@angular/router": "4.1.2",
     "@types/node": "7.0.18",
-    "@ngx-translate/core": "latest",
-    "@ngx-translate/http-loader": "latest",
+    "@ngx-translate/core": "6.0.1",
+    "@ngx-translate/http-loader": "0.1.0",
     "angular2-template-loader": "0.6.2",
     "aspnet-prerendering": "^2.0.5",
     "aspnet-webpack": "^1.0.29",
