working on chat and message + done some refactoring

--- a/TravelPlanner.BusinessLogic/TravelPlanner.BusinessLogic.csproj
+++ b/TravelPlanner.BusinessLogic/TravelPlanner.BusinessLogic.csproj
@@ -48,8 +48,10 @@
   <ItemGroup>
     <Compile Include="Extensions\DateTimeExtensions.cs" />
     <Compile Include="Extensions\GuidHelper.cs" />
+    <Compile Include="Interfaces\IMessageService.cs" />
     <Compile Include="Interfaces\ITripService.cs" />
     <Compile Include="Interfaces\INotificationService.cs" />
+    <Compile Include="Services\MessageService.cs" />
     <Compile Include="Models\NotificationModel.cs" />
     <Compile Include="Interfaces\ITripInviteService.cs" />
     <Compile Include="Services\TextFileNotificationService.cs" />
