--- a/TravelPlanner.Web/package.json
+++ b/TravelPlanner.Web/package.json
@@ -22,6 +22,7 @@
     "aspnet-prerendering": "^2.0.5",
     "aspnet-webpack": "^1.0.29",
     "awesome-typescript-loader": "3.1.3",
+    "ng2-toastr": "4.1.2",
     "bootstrap": "3.3.7",
     "css": "2.2.1",
     "css-loader": "0.28.1",
