added basic map and car support

--- a/TravelPlanner.Web/appsettings.json
+++ b/TravelPlanner.Web/appsettings.json
@@ -9,6 +9,9 @@
     "Issuer": "travel_planner",
     "Audience": "TravelPlannerAPI"
   },
+  "GoogleMaps": {
+    "ApiKey": "AIzaSyA6vInNftmT05_QDcyREDjQJHjuEmJaiRU"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
