--- a/TravelPlanner.DomainModel/TravelPlanner.DomainModel.csproj
+++ b/TravelPlanner.DomainModel/TravelPlanner.DomainModel.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Car.cs" />
     <Compile Include="Chat.cs" />
     <Compile Include="TripInvite.cs" />
     <Compile Include="Message.cs" />
