--- a/TravelPlanner.Web/package.json
+++ b/TravelPlanner.Web/package.json
@@ -46,7 +46,9 @@
     "webpack": "2.5.1",
     "webpack-hot-middleware": "2.18.0",
     "webpack-merge": "4.1.0",
-    "zone.js": "0.8.10"
+    "zone.js": "0.8.10",
+    "@agm/core": "latest",
+    "@types/googlemaps":  "latest" 
   },
   "devDependencies": {
     "@types/chai": "3.5.2",
