--- a/TravelPlanner.BusinessLogic/TravelPlanner.BusinessLogic.csproj
+++ b/TravelPlanner.BusinessLogic/TravelPlanner.BusinessLogic.csproj
@@ -33,6 +33,9 @@
     <Reference Include="AutoMapper, Version=6.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <HintPath>..\packages\AutoMapper.6.1.1\lib\net45\AutoMapper.dll</HintPath>
     </Reference>
+    <Reference Include="HtmlAgilityPack, Version=1.5.1.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>..\packages\HtmlAgilityPack.1.5.1\lib\Net45\HtmlAgilityPack.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
     </Reference>
@@ -50,9 +53,12 @@
     <Compile Include="Interfaces\IMessageService.cs" />
     <Compile Include="Interfaces\ITripService.cs" />
     <Compile Include="Interfaces\INotificationService.cs" />
+    <Compile Include="Interfaces\ISightObjectService.cs" />
     <Compile Include="Services\MessageService.cs" />
     <Compile Include="Models\NotificationModel.cs" />
     <Compile Include="Interfaces\ITripInviteService.cs" />
+    <Compile Include="Services\SightObjectService.cs" />
+    <Compile Include="Services\SightsParser.cs" />
     <Compile Include="Services\TextFileNotificationService.cs" />
     <Compile Include="Services\TripInviteService.cs" />
     <Compile Include="Services\TripService.cs" />
