--- a/TravelPlanner.DomainModel/TravelPlanner.DomainModel.csproj
+++ b/TravelPlanner.DomainModel/TravelPlanner.DomainModel.csproj
@@ -47,7 +47,7 @@
     <Compile Include="Car.cs" />
     <Compile Include="Chat.cs" />
     <Compile Include="LatLng.cs" />
-    <Compile Include="SightMapMarker.cs" />
+    <Compile Include="SightObject.cs" />
     <Compile Include="TripInvite.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="Trip.cs" />
