--- a/TravelPlanner.TranslationKeysExtracter/TravelPlanner.TranslationKeysExtracter.fsproj
+++ b/TravelPlanner.TranslationKeysExtracter/TravelPlanner.TranslationKeysExtracter.fsproj
@@ -72,6 +72,7 @@
     <Reference Include="System.ValueTuple">
       <HintPath>..\packages\System.ValueTuple.4.3.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web.Extensions" />
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
