added one more language

--- a/TravelPlanner.Web/TravelPlanner.Web.csproj
+++ b/TravelPlanner.Web/TravelPlanner.Web.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="wwwroot\dist\bootstrap-theme.css" />
+    <Content Include="wwwroot\en.json" />
     <Content Include="wwwroot\ru.json" />
   </ItemGroup>
   <ItemGroup>
